--- a/liveCycle.html
+++ b/liveCycle.html
@@ -13,6 +13,6 @@
 
 </div>
 
-<script type="text/babel" src="script/counter.js"></script>
+<script type="text/babel" src="script/liveCycle.js"></script>
 </body>
 </html>
