--- a/timer.html
+++ b/timer.html
@@ -13,6 +13,6 @@
 
 </div>
 
-<script type="text/babel" src="script/liveCycle.js"></script>
+<script type="text/babel" src="script/timer.js"></script>
 </body>
 </html>
